[gd_scene load_steps=3 format=3 uid="uid://wtw1yucbmppr"]

[ext_resource type="Script" uid="uid://dkvq7tbm73ihi" path="res://scenes/main_menu.gd" id="1_qkhwq"]
[ext_resource type="Texture2D" uid="uid://kdfxadn35qbf" path="res://assets/logo2.png" id="2_3d1i7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qkhwq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -114.5
offset_right = 39.5
offset_bottom = 114.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="startButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("2_3d1i7")

[node name="resumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("2_3d1i7")

[node name="quitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("2_3d1i7")
